2010-06-15  Marek Safar  <marek.safar@gmail.com>
	
	* parameter.cs, property.cs, membercache.cs, decl.cs, iterators.cs,
	anonymous.cs, expression.cs, support.cs, method.cs, pending.cs,
	class.cs, cs-parser.jay: Simplify parsing of accessors by removing
	any intermediate steps and fake nodes, also saves few MBs of memory.

2010-06-11  Marek Safar  <marek.safar@gmail.com>
	
	* modifiers.cs, rootcontext.cs, location.cs, cs-parser.jay: More
	precise modifiers parsing.

2010-06-09  Marek Safar  <marek.safar@gmail.com>

	* cs-tokenizer.cs, anonymous.cs, expression.cs, cs-parser.jay:
	Fixed few shift/reduce conflicts.

2010-06-09  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, parameter.cs, dynamic.cs, typespec.cs,
	expression.cs, ecore.cs, cs-parser.jay: Fully parse composed type
	specifiers and stop using string in AST.

2010-06-07  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, eval.cs, iterators.cs, anonymous.cs, expression.cs
	method.cs, class.cs, delegate.cs, cs-parser.jay, driver.cs, visit.cs
	enum.cs: Hold location of predefined types.

2010-06-07  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #610878
	* pending.cs: Clone cached list before modifying.

2010-06-04  Marek Safar  <marek.safar@gmail.com>

	* convert.cs, typespec.cs, expression.cs: Start using array member
	kind for better conversion checks.
	
	* import.cs, report.cs: Report better error message for runtime
	reflection bugs.

2010-06-04  Marek Safar  <marek.safar@gmail.com>

	* membercache.cs, convert.cs, nullable.cs, expression.cs: Optimize
	user defined conversion probing and simplify user conversion for
	nullabe types. Fixes #610940.

2010-06-03  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #610919
	* parameter.cs, property.cs, cs-parser.jay: Use independent implicit
	parameters for explicit event accessors. Anonymous method capturing
	won't otherwise work for event implicit parameter.

2010-06-02  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #610088